--- a/views/login_leagues.ejs
+++ b/views/login_leagues.ejs
@@ -4,7 +4,7 @@
             <h2 class="login-leagues-form-title">Welcome Back, League!</h2>
             <p class="login-leagues-form-subtitle">Log in to manage your league's schedule, results, and announcements.</p>
 
-            <form class="login-leagues-form" id="login-leagues-form">
+            <form class="login-leagues-form" id="login-leagues-form" method ="post" action="/login/login_leagues">
                 <div class="login-leagues-form-group">
                     <label for="login-leagues-name" class="login-leagues-label">League Name:</label>
                     <input type="text" id="login-leagues-name" class="login-leagues-input" name="league_name" required>
