--- a/views/login_viewers.ejs
+++ b/views/login_viewers.ejs
@@ -4,15 +4,15 @@
             <h2 class="login-viewer-form-title">Welcome Back, Viewer!</h2>
             <p class="login-viewer-form-subtitle">Log in to access your personalized sports content.</p>
 
-            <form class="login-viewer-form" id="login-viewer-form">
+            <form class="login-viewer-form" id="login-viewer-form" method="post" action="/login/login_viewers">
                 <div class="login-viewer-form-group">
                     <label for="login-viewer-email" class="login-viewer-label">Email:</label>
-                    <input type="email" id="login-viewer-email" class="login-viewer-input" name="user_email" required>
+                    <input type="email" id="login-viewer-email" class="login-viewer-input" name="email" required>
                 </div>
 
                 <div class="login-viewer-form-group">
                     <label for="login-viewer-password" class="login-viewer-label">Password:</label>
-                    <input type="password" id="login-viewer-password" class="login-viewer-input" name="user_password" required>
+                    <input type="password" id="login-viewer-password" class="login-viewer-input" name="password" required>
                 </div>
                 <p>Not Register? <a href="/register/register_viewers"  style="color: aqua;">register</a></p>
 
