few login errors fixed

--- a/views/login_leagues.ejs
+++ b/views/login_leagues.ejs
@@ -7,12 +7,12 @@
             <form class="login-leagues-form" id="login-leagues-form" method ="post" action="/login/login_leagues">
                 <div class="login-leagues-form-group">
                     <label for="login-leagues-name" class="login-leagues-label">League Name:</label>
-                    <input type="text" id="login-leagues-name" class="login-leagues-input" name="league_name" required>
+                    <input type="text" id="login-leagues-name" class="login-leagues-input" name="name" required>
                 </div>
 
                 <div class="login-leagues-form-group">
                     <label for="login-leagues-password" class="login-leagues-label">League Password:</label>
-                    <input type="password" id="login-leagues-password" class="login-leagues-input" name="league_password" required>
+                    <input type="password" id="login-leagues-password" class="login-leagues-input" name="password" required>
                 </div>
                 <p>Not Register? <a href="/register/register_leagues"  style="color: aqua;">register</a></p>
 
