--- a/views/login_clubs.ejs
+++ b/views/login_clubs.ejs
@@ -7,12 +7,12 @@
             <form class="login-clubs-form" id="login-clubs-form" method="post" action="/login/login_clubs">
                 <div class="login-clubs-form-group">
                     <label for="login-clubs-email" class="login-clubs-label">Club Email:</label>
-                    <input type="email" id="login-clubs-email" class="login-clubs-input" name="club_email" required>
+                    <input type="email" id="login-clubs-email" class="login-clubs-input" name="email" required>
                 </div>
 
                 <div class="login-clubs-form-group">
                     <label for="login-clubs-password" class="login-clubs-label">Club Password:</label>
-                    <input type="password" id="login-clubs-password" class="login-clubs-input" name="club_password" required>
+                    <input type="password" id="login-clubs-password" class="login-clubs-input" name="password" required>
                 </div>
                 <p>Not Register? <a href="/register/register_clubs"  style="color: aqua;">register</a></p>
 
