Upation on specific listing of club

--- a/views/layouts/main.ejs
+++ b/views/layouts/main.ejs
@@ -6,6 +6,7 @@
     <link rel="icon" href="/images/Crossfit.jpg">
     <link rel="stylesheet" href="/styles/style.css">
     <link rel="stylesheet" href="/styles/club_enlistpage.css">
+    <link rel="stylesheet" href="/styles/club_list_specific.css">
     <link rel="stylesheet" href="/styles/news.css">
     <link rel="stylesheet" href="/styles/register_viewers.css">
     <link rel="stylesheet" href="/styles/register_clubs.css">
