--- a/views/layouts/main.ejs
+++ b/views/layouts/main.ejs
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="/styles/style.css">
     <link rel="stylesheet" href="/styles/club_enlistpage.css">
     <link rel="stylesheet" href="/styles/club_list_specific.css">
+    <link rel="stylesheet" href="/styles/club_dashboard.css">
     <link rel="stylesheet" href="/styles/news.css">
     <link rel="stylesheet" href="/styles/register_viewers.css">
     <link rel="stylesheet" href="/styles/register_clubs.css">
@@ -22,5 +23,6 @@
         <%- body %>
     </section>
     <%- include('../partials/footer') %>
+    <script src="club_dashboard.js"></script>
 </body>
 </html>
