--- a/views/layouts/main.ejs
+++ b/views/layouts/main.ejs
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="/styles/club_enlistpage.css">
     <link rel="stylesheet" href="/styles/club_list_specific.css">
     <link rel="stylesheet" href="/styles/club_dashboard.css">
+    <link rel="stylesheet" href="/styles/viewers_dashboard.css">
     <link rel="stylesheet" href="/styles/news.css">
     <link rel="stylesheet" href="/styles/register_viewers.css">
     <link rel="stylesheet" href="/styles/register_clubs.css">
@@ -23,6 +24,7 @@
         <%- body %>
     </section>
     <%- include('../partials/footer') %>
-    <script src="club_dashboard.js"></script>
+    <script src="/script/club_dashboard.js"></script>
+    <script src="/script/viewer_dashboard.js"></script>
 </body>
 </html>
