--- a/views/register_viewers.ejs
+++ b/views/register_viewers.ejs
@@ -22,8 +22,11 @@
 
         <div class="register-viewers-form-group">
           <label for="register-viewers-favorite-teams" class="register-viewers-label">Favorite Teams:</label>
-          <select id="register-viewers-favorite-teams" class="register-viewers-select" name="favorite_teams" >
+          <select id="register-viewers-favorite-teams" class="register-viewers-select" name="favourite_team" >
            <option value="">--select--</option>
+           <% clubs.forEach(club => { %>
+            <option value="<%= club._id %>" ><%= club.name %></option>
+           <% }) %>
           </select>
         </div>
 
