--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,30 +1,93 @@
 <header>
-  <div class="logo-container">
-    <img src="/images/Crossfit.jpg" alt="logo-image">
-    <a href="/">Crossfit</a>
+  <div class="header-desktop-nav">
+    <div class="header-logo-container">
+      <img src="/images/logo.png" alt="logo-image">
+      <a href="/">Crossfit</a>
+    </div>
 
+    <div class="header-links">
+      <ul>
+        <li><a href="/news">News</a></li>
+        <li><a href="/live_scores">Live-Score</a></li>
+        <li><a href="/leagues">Leagues</a></li>
+        <li><a href="/merchandise">Merchandise</a></li>
+        <li><a href="/clubs">clubs</a></li>
+      </ul>
+      <% if( user==="none" ){ %>
+        <button class="links-button"><a href="/#home-roles">Login</a></button>
+      <% } else { %>
+        <div class="header-user-menu">
+          <img src="/images/user-image.jpg" alt="User Avatar" class="header-user-avatar">
+          <div class="header-dropdown header-hidden">
+            <% if( user.user_type==="club" ) { %>
+              <a href="/dashboard/clubs" class="header-dropdown-item">
+                <i class="fas fa-cog"></i> Settings
+              </a>
+            <% } else if( user.user_type==="league" ) { %>
+              <a href="/dashboard/league" class="header-dropdown-item">
+                <i class="fas fa-cog"></i> Settings
+              </a>
+            <% } else { %>
+              <a href="/dashboard/viewer" class="header-dropdown-item">
+                <i class="fas fa-cog"></i> Settings
+              </a>
+            <% } %>
+            <a href="/#home-roles" class="header-dropdown-item header-logout">
+              <i class="fas fa-sign-out-alt"></i> Logout
+            </a>
+          </div>
+        </div>
+      <% } %>
+    </div>
   </div>
-  <div class="links">
-    <ul>
-      <li><a href="/news">News</a></li>
-      <li><a href="/live_scores">Live-Score</a></li>
-      <li><a href="/leagues">Leagues</a></li>
-      <li><a href="/merchandise">Merchandise</a></li>
-      <li><a href="/clubs">clubs</a></li>
-    </ul>
 
-    <% if(user === "none"){ %>
-    <button class="home-role-btn links-button"><a href="/#home-roles">Login</a></button>
-    <% }else if(user.user_type ==="club"){ %>
-    <button class='links-button '><a href="/dashboard/clubs"><%= user.name  %></a></button>
-    <button class="home-role-btn home-role-logout-btn"><a href="/#home-roles">Log Out</a></button>
-    <% }else if(user.user_type ==="league"){ %>
-    <button class='links-button '><a href="/dashboard/league"><%=user.name  %></a></button>
-      <button   class="home-role-btn home-role-logout-btn"><a href="/#home-roles">Log Out</a></button>
-    
-    <% }else if(user.user_type ==="viewer"){ %>
-    <button class="links-button "><a href="/dashboard/viewer"><%=user.name  %></a></button>
-      <button  class="home-role-btn home-role-logout-btn"><a href="/#home-roles">Log Out</a></button>
-    <% } %>
+  <div class="header-mobile-nav">
+    <div class="header-logo-container">
+      <img src="/images/logo.png" alt="logo-image">
+      <a href="">Crossfit</a>
+    </div>
+    <div class="header-links">
+      <% if( user==="none" ){ %>
+        <button class="links-button"><a href="/#home-roles">Login</a></button>
+      <% } else { %>
+        <div class="header-user-menu">
+          <img src="/images/user-image.jpg" alt="User Avatar" class="header-user-avatar">
+          <div class="header-dropdown header-hidden">
+            <% if( user.user_type==="club" ) { %>
+              <a href="/dashboard/clubs" class="header-dropdown-item">
+                <i class="fas fa-cog"></i> Settings
+              </a>
+            <% } else if( user.user_type==="league" ) { %>
+              <a href="/dashboard/league" class="header-dropdown-item">
+                <i class="fas fa-cog"></i> Settings
+              </a>
+            <% } else { %>
+              <a href="/dashboard/viewer" class="header-dropdown-item">
+                <i class="fas fa-cog"></i> Settings
+              </a>
+            <% } %>
+            <a href="/#home-roles" class="header-dropdown-item header-logout">
+              <i class="fas fa-sign-out-alt"></i> Logout
+            </a>
+          </div>
+        </div>
+      <% } %>
+      <div class="header-mobile-menu">
+        <div class="header-hamburger">
+          <i class="fas fa-bars"></i>
+        </div>
+        <div class="header-mobile-dropdown header-hidden">
+          <ul>
+            <li><a href="/news">News</a></li>
+            <li><a href="/live_scores">Live-Score</a></li>
+            <li><a href="/leagues">Leagues</a></li>
+            <li><a href="/merchandise">Merchandise</a></li>
+            <li><a href="/clubs">clubs</a></li>
+          </ul>
+        </div>
+      </div>
+    </div>
   </div>
 </header>
+
+<script src="script/header.js"></script>
