--- a/views/layouts/main.ejs
+++ b/views/layouts/main.ejs
@@ -28,5 +28,6 @@
     <%- include('../partials/footer') %>
     <script src="/script/club_dashboard.js"></script>
     <script src="/script/viewer_dashboard.js"></script>
+    <script src="/script/header.js"></script>
 </body>
 </html>
