--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -47,8 +47,7 @@ header {
 }
 
 .header-desktop-nav {
-  max-width: 1200px;
-  margin: 0 auto;
+  width: 100%;
   display: flex;
   justify-content: space-between;
   align-items: center;
